--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <script async defer src="/bundle.js"></script>
   </head>
   <body>
     <div id="main"></div>
-    <script async defer src="/bundle.js"></script>    
   </body>
-</html> 
+</html>
+
